--- a/examples/log4j.properties
+++ b/examples/log4j.properties
@@ -1,13 +1,11 @@
-log4j.rootLogger=warn, A
-
-log4j.appender.A=org.apache.log4j.ConsoleAppender
-log4j.appender.A.layout=org.apache.log4j.PatternLayout
-# Pattern to output the caller's file name and line number.
-log4j.appender.A.layout.ConversionPattern=%5p %C (%M) - %m%n
-
-log4j.appender.B=org.apache.log4j.ConsoleAppender
-log4j.appender.B.layout=org.apache.log4j.PatternLayout
-log4j.appender.B.layout.ConversionPattern=%5p %c %X{methodName}:%X{lineNumber} - %m%n
-
+log4j.rootLogger=WARN, A
 log4j.logger.jruby=debug,B
 log4j.additivity.jruby=false
+
+log4j.appender.A=com.colorlog.log4j.AnsiColorConsoleAppender
+log4j.appender.A.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.A.layout.ConversionPattern={highlight}%-5p: %c{/highlight} [%t] - %m%n
+
+log4j.appender.B=com.colorlog.log4j.AnsiColorConsoleAppender
+log4j.appender.B.layout=org.apache.log4j.EnhancedPatternLayout
+log4j.appender.B.layout.ConversionPattern={highlight}%-5p: %c %X{methodName}:%X{lineNumber}{/highlight} [%t] - %m%n
